frontend/src/Kitchen.css
.Screen-Container{
    width: 100vw;
    height: 120vh;
}

.Kitchen-Screen {
    width: 100%;
    height: 83.3%;
    background-color: lightgray;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    overflow-x: auto;
}

.Kitchen-Order {
    width: 25%;
    height: 50%;
    border: 1px solid black;
    position: relative;
    overflow-y: scroll;
}

.Order-Header {
    position: relative;
    width: 100%;
    height: 10%;
    border-bottom: 1px solid black;
    display: flex;
    align-items: center;
    z-index: 2;
}

.Order-Number {
    align-items: center;
    align-self: center;
    margin-left: 5%;
    width: 55%;
    font-size: 150%;
}

.Order-Container {
    width: 100%;
    min-height: 90%;
    padding: 2.5%;
    position: relative;
    background-color: white;
    opacity: 50%;
    z-index: 2;
}

.Item-Container {
    width: 100%;
    height: auto;
    padding-top: 2%;
}

.Ingredient-Single-Container {
    display: flex;
    flex-direction: row;
}

.Ingredient-Name {
    width: 67.5%;
    /*background-color: blue;*/
}

.Ingredients-Container {
    padding-left: 2.5%;
    padding-top: 1%;
    padding-right: 2.5%;
}

.Ingredient-Amount {
    width: 35%;
    /*background-color: lightcoral;*/
}

.Ingredient-Single-Container.none {
    background-color: coral; /* Background color when 'None' */
}

.Ingredient-Single-Container.extra {
    background-color: lightgreen; /* Background color when 'Extra' */
}


.Control-Buttons{
    width: 100%;
    height: 16.7%;
    background-color: lightgray;
    display: flex;
    flex-direction: row;
    font-size: 200%;
}

.Exit-Button{
    width: 15%;
    height: 100%;
    background-color: darkred;
    font-size: 125%;
}

.Complete-Container{
    width: 50%;
    height: 100%;
    background-color: lightgray;
    display: flex;
    flex-direction: row;
    overflow-x: auto;
    flex-wrap: wrap;
}

.Accessibility-Button{
    background-color: lightgreen;
    width: 15%;
    height: 100%;
    font-size: 125%;
}

.Complete-Button{
    width: 25%;
    height: 50%;
    background-color: lightskyblue;
    display: flex;              /* Enable flexbox */
    justify-content: center;    /* Horizontally center the text */
    align-items: center;
    border: 1px solid black;
    font-size: 150%;
}

.Navigation-Container{
    width: 20%;
    height: 100%;
    background-color: red;
}

.Navigation-Button{
    display: block;
    width: 100%;
    height: 50%;
    font-size: 175%;
}

.Background-Number{
    position: absolute;
    top: 40%;
    left: 40%;
    /*transform: translate(-50%, -50%);*/
    align-self: center;
    align-items: center;
    font-size: 100px; /* Size of the number */
    color: rgba(0, 0, 0, 0.1); /* Light opacity for the number */
    z-index: 1; /* Ensure it's behind the content */
}



.Screen-Popup{
    width: 100vw;
    height: 100vh;
    background-color: lightgray;
}

.close-button{
    width: 10%;
    height: 10%;
    color: red;
    font-size: 300%;
}

